# cli

./: .env  .gitignore  ADD_WITH_TREE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SHORTCUTS.md  CODE_GUIDELINES.md  Cargo.toml  Components.toml  FakeCargo.toml  README.md  REPORT.md  REPORT_INIT.md  TODOS.md  TODOS_CLAUDE.md  TREE.md  __FEATURES.md  __FEATURES_MCP.md  app_config.toml  components.json  index.json  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.js  tree_registry.json
.claude/commands/: _report.md
.config/: nextest.toml
components/ui/: button.rs
src/: lib.rs  main.rs
src/command_add/: _add.rs  add_cargo_deps_to_toml.rs  add_main.rs  component_type.rs  components.rs  components_toml.rs  dependencies.rs  fetch.rs  fetch_from_registry_and_write.rs  fetch_index_json.rs  get_path_from_toml.rs  installed.rs  mod.rs  models.rs  print_tree.rs  registry.rs  resolve_registry_dependencies.rs  tree_parser.rs
src/command_add/ratatui/: app.rs  crossterm.rs  header.rs  mod.rs
src/command_add/ratatui/tabs/: _render.rs  mod.rs  tab1_components.rs  tab2_hooks.rs  tab3_blocks.rs  tab4_icons.rs  tab5_demos.rs  tab9_settings.rs
src/command_add/ratatui/widgets/: checked_popup.rs  detail_panel.rs  helpers.rs  mod.rs  popup.rs  search_input.rs
src/command_diff/: _diff.rs  mod.rs
src/command_docs/: _docs.rs  mod.rs
src/command_info/: _info.rs  mod.rs
src/command_init/: _init.rs  backup.rs  colors.rs  config.rs  crates.rs  fetch.rs  handle_cargo_toml.rs  handle_config_schema.rs  handle_index_styles.rs  handle_install_dependencies.rs  init_fetch_functions.rs  init_install_dependencies.rs  init_main.rs  install.rs  mod.rs  process_init.rs  template.rs  user_input.rs  workspace_utils.rs
src/command_list/: _list.rs  mod.rs
src/command_mcp/: _mcp.rs  config.rs  mod.rs  tools.rs
src/command_search/: _search.rs  mod.rs
src/command_starters/: _starters.rs  mod.rs
src/command_update/: _update.rs  mod.rs
src/command_view/: _view.rs  mod.rs
src/constants/: commands.rs  dependencies.rs  env.rs  file_name.rs  file_names.rs  mod.rs  others.rs  paths.rs  template.rs  templates_init.rs  url.rs  urls.rs
src/shared/: cli_error.rs  error.rs  markdown_utils.rs  mod.rs  rust_ui_client.rs  shared_check_file_ask_overwrite.rs  shared_fetch_functions.rs  shared_write_template_file.rs  task_spinner.rs
style/: tailwind.css
tests/: test_registry_http.rs
