[package]
name = "ui-cli"
version = "0.2.4"
edition = "2024"
authors = ["Rustify"]
description = "A CLI to add components to your app."
keywords = ["cli", "ui", "components", "leptos", "tailwind"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/rust-ui/cli"



[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
dialoguer = "0.12"
dotenv = "0.15"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["json", "blocking"], default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"



[[bin]]
name = "ui"
path = "src/main.rs"
