[package]
name = "ui-cli"
version = "0.2.10"
edition = "2024"
authors = ["Rustify"]
homepage = "https://rust-ui.com/docs/components/cli"
description = "A CLI to add components to your app."
keywords = ["cli", "ui", "components", "leptos", "tailwind"]
categories = ["gui", "web-programming", "development-tools", "accessibility", "wasm"]
license = "MIT"
readme = "./README.md"

repository = "https://github.com/rust-ui/cli"



[dependencies]
anyhow = { version = "1", default-features = false }
cargo_toml = { version = "0.22", default-features = false }
clap = { version = "4", default-features = false, features = ["derive", "std"] }
colored = { version = "3", default-features = false }
dialoguer = { version = "0.12", default-features = false }
indicatif = { version = "0.18", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
strum = { version = "0.26", default-features = false, features = ["derive"] }
heck = { version = "0.5", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
toml = { version = "0.9", default-features = false, features = ["parse", "display", "serde"] }

[dev-dependencies]
tempfile = "3.0"



[[bin]]
name = "ui"
path = "src/main.rs"
